# yolov5-rtsp-flask

./: .env  .gitignore  README.md  client.py  docker-compose.yml
.github/workflows/: build_and_push.yaml  test.yaml  test_and_build.yaml
flask-app/: .env.container  .env.host  Dockerfile  exceptions.py  load_env_vars.sh  main.py  pyproject.toml  stream_loader.py
flask-app/src/flask_app/: annotator.py  exceptions.py  stream_loader.py  utils.py  yolov5.py
flask-app/tests/: test_model.py  test_preprocessor.py  test_rtsp_stream_reader.py
rtsp-server/: mediamtx.yml
