[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["Hazem Khairy <hazem.hassan.kh@gmail.com>"]
packages = [{include = "flask_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.9.0.80"
nptyping = "^2.5.0"
onnxruntime = "^1.17.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
